--- a/config.json
+++ b/config.json
@@ -1,6 +1,25 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
-    "GMEEK_VERSION":"last"
+    "title":"💗潇洒博客💗",
+    "subTitle":"潇洒个人博客空间",
+    "homeUrl":"https://git.3344550.xyz/",
+    "avatarUrl":"https://g.3344550.xyz/https://raw.githubusercontent.com/yxcqr/xsblog/main/IMG/%E9%BB%84%E5%B8%BD%E7%9C%BC%E9%95%9C%E5%85%AB%E5%AD%97%E8%83%A1-%E5%9B%BE%E6%A0%87-%E6%BD%87%E6%B4%92%E7%A7%91%E6%8A%80LOGO.png",
+    "email":"xskjvip@outlook.com",
+    "startSite":"06/18/2018",
+    "filingNum":"💗渝ICP备20180618号💗",
+    "onePageListNum":15,
+    "singlePage":["about"],
+    "iconList":{"music":"M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13Z"},
+    "commentLabelColor":"#006b75",
+    "yearColorList":["#bc4c00", "#0969da", "#1f883d", "#A333D0"],
+    "i18n":"CN",
+    "UTC":8,
+    "themeMode":"manual",
+    "dayTheme":"light",
+    "nightTheme":"dark_colorblind",
+    "urlMode":"pinyin",
+    "style":"",
+    "script":"",
+    "showPostSource":1,
+    "rssSplit":"sentence",
+    "bottomText":"💗转载请注明出处💗",
 }
