--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"💗潇洒博客💗",
-    "subTitle":"潇洒个人博客空间",
+    "title":"💗潇洒科技💗",
+    "subTitle":"潇洒科技博客空间",
     "homeUrl":"https://git.3344550.xyz/",
     "avatarUrl":"https://g.3344550.xyz/https://raw.githubusercontent.com/yxcqr/xsblog/main/IMG/%E9%BB%84%E5%B8%BD%E7%9C%BC%E9%95%9C%E5%85%AB%E5%AD%97%E8%83%A1-%E5%9B%BE%E6%A0%87-%E6%BD%87%E6%B4%92%E7%A7%91%E6%8A%80LOGO.png",
     "email":"xskjvip@outlook.com",
